--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.png 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
-cnblog_url: http://www.cnblogs.com/ityouknow
+repository: a1446566882/soleung.github.io
+github_url: https://github.com/a1446566882
+cnblog_url: https://a1446566882.github.io/soleung.github.io/
 url: http://www.ityouknow.com
 enforce_ssl: ityouknow.com
 
